[gd_scene load_steps=6 format=3 uid="uid://c2k5hxa654km7"]

[ext_resource type="Script" uid="uid://c16cqdt260q61" path="res://game/rooms/room_overlay.gd" id="1_brg1v"]
[ext_resource type="Texture2D" uid="uid://dduhjhbyxd14y" path="res://assets/room_details/arrow_left.png" id="2_c4euj"]
[ext_resource type="Texture2D" uid="uid://cclkm1h2nim3x" path="res://assets/room_details/arrow_right.png" id="3_0h1jq"]
[ext_resource type="Texture2D" uid="uid://dmnmkxsnexb3d" path="res://assets/room_details/arrow_down.png" id="4_dic12"]
[ext_resource type="Texture2D" uid="uid://cgggqyclpoo3o" path="res://assets/room_details/arrow_up.png" id="5_vvy4f"]

[node name="RoomImages" type="Node2D"]
script = ExtResource("1_brg1v")

[node name="ArrowLeft" type="Sprite2D" parent="."]
position = Vector2(30, 90)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_c4euj")

[node name="ArrowRight" type="Sprite2D" parent="."]
position = Vector2(210, 90)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0h1jq")

[node name="ArrowDown" type="Sprite2D" parent="."]
position = Vector2(120, 151)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_dic12")

[node name="ArrowUp" type="Sprite2D" parent="."]
position = Vector2(120, 30)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_vvy4f")

[node name="Progress" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = 126.0
offset_right = 215.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
show_percentage = false
